# wx-cli

./: .env.example  .gitignore  ADDITIONAL_FINDINGS.md  CHANGELOG.md  CODE_ISSUES.md  Cargo.toml  FINDINGS_SUMMARY.md  LICENSE  RADAR.md  README.md  RUST_VERSION.md  SECURITY_AUDIT.md  SEVERE_WEATHER_FILTER.md  STORYTELLING_FEATURE.md  TEST_RESULTS.md  VISUAL_TEST_RESULTS.md  WORLDVIEW_SUMMARY.md  install.ps1  install.sh  pyproject.toml  ruff.toml  test_all_features.py  test_notification_eval.py  test_radar_visual.py  test_security_fixes.py  test_visuals.py
docs/: WINDOWS_SETUP.md
scripts/: setup-scheduled-task.ps1
src/: cache.rs  cli.rs  config.rs  fetchers.rs  lib.rs  main.rs  profile.rs  render.rs  story.rs
tests/: conftest.py  test_chat.py  test_cli.py  test_explain.py  test_fetchers.py  test_forecaster.py  test_nws_enhancements.py  test_orchestrator.py  test_storyteller.py  test_worldview.py
tmp_state_online/: last_query.json
web/: app.js  index.html  styles.css
wx/: AGENTS.md  __init__.py  airquality.py  aviation.py  base_client.py  chat.py  cli.py  config.py  config_wizard.py  constants.py  dashboard.py  design.py  favorites.py  fetchers.py  forecaster.py  hurricanes.py  international.py  lightning.py  logging_config.py  marine.py  notifications.py  notifications_windows.py  openrouter_client.py  orchestrator.py  radar.py  rate_limiter.py  render.py  security.py  storyteller.py  visualizations.py
