[package]
name = "wx"
version = "0.2.0"
edition = "2021"
authors = ["wx contributors"]
description = "Lightning-fast weather CLI with AI storytelling"
license = "Proprietary"

[lib]
name = "wx"
path = "src/lib.rs"

[[bin]]
name = "wx"
path = "src/main.rs"

[[bin]]
name = "wx-server"
path = "src/bin/server.rs"

[dependencies]
# CLI parsing - fast and elegant
clap = { version = "4.5", features = ["derive", "cargo"] }
clap_complete = "4.5"

# HTTP client - async and fast
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1.40", features = ["full"] }

# JSON parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Terminal rendering
crossterm = "0.28"
colored = "2.1"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Caching
sled = "0.34"

# Env variables
dotenv = "0.15"

# URL encoding
urlencoding = "2.1"

# Web server (for wx-server binary)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
mockito = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
