[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wx-cli"
version = "0.1.0"
description = "Mostly-AI Weather CLI"
readme = "README.md"
authors = [{name = "wx contributors"}]
license = {text = "All rights reserved"}
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "rich>=13",
    "httpx>=0.24",
    "python-dateutil>=2.8",
    "google-genai>=0.3.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-mock>=3.12",
]

[project.urls]
Homepage = "https://github.com/Exvin2/claudex-cli"

[project.scripts]
wx = "wx.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["wx"]
